[gd_scene load_steps=20 format=3 uid="uid://c73m21uddf5ye"]

[ext_resource type="Script" uid="uid://cbq3jb38hm50o" path="res://scenes/UI/board/board_controler.gd" id="1_hmund"]
[ext_resource type="PackedScene" uid="uid://bcdby6svlp0fj" path="res://scenes/UI/backgrounds/fade_background.tscn" id="2_jxns0"]
[ext_resource type="Script" uid="uid://dsqxah3531rjv" path="res://scenes/UI/board/board_movement.gd" id="3_myonu"]
[ext_resource type="Texture2D" uid="uid://cwqhqr5tnxgpm" path="res://textures/ui/board/board_background_UI.png" id="4_l2w5m"]
[ext_resource type="Script" uid="uid://dvh43md5q2nmy" path="res://scenes/UI/board/element_controller.gd" id="6_mvk05"]
[ext_resource type="Script" uid="uid://cjt28j8mp3x8r" path="res://scenes/UI/board/connection_controller.gd" id="7_jjw5p"]
[ext_resource type="PackedScene" uid="uid://c3cr13ksd4qam" path="res://scenes/UI/buttons/button_symbol_plus.tscn" id="8_7p7h1"]
[ext_resource type="Script" uid="uid://ddprgewir1q4l" path="res://scenes/UI/buttons/create_note_button.gd" id="9_co2af"]
[ext_resource type="FontFile" uid="uid://08ws45e5yv6x" path="res://fonts/test_font.otf" id="10_1gtg5"]

[sub_resource type="Shader" id="Shader_kj08y"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ja2cj"]
render_priority = 0
shader = SubResource("Shader_kj08y")

[sub_resource type="Gradient" id="Gradient_ffl47"]
offsets = PackedFloat32Array(0.420091, 0.812785, 1)
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 0.236344, 0, 0, 0, 0.6)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5jfcx"]
gradient = SubResource("Gradient_ffl47")
width = 255
height = 255
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_rfis8"]
offsets = PackedFloat32Array(0.491979, 1)
colors = PackedColorArray(1, 0, 0, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_b8f32"]
gradient = SubResource("Gradient_rfis8")
width = 16
height = 16
fill = 1
fill_from = Vector2(0.512821, 0.495726)

[sub_resource type="Gradient" id="Gradient_mfdub"]
offsets = PackedFloat32Array(0.465241, 1)
colors = PackedColorArray(3.27289e-06, 0.656007, 0.950405, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_8n1dx"]
gradient = SubResource("Gradient_mfdub")
width = 16
height = 16
fill = 1
fill_from = Vector2(0.487179, 0.491453)

[sub_resource type="Gradient" id="Gradient_1jnkq"]
offsets = PackedFloat32Array(0.593583, 1)
colors = PackedColorArray(0.187074, 0.732006, 3.85046e-07, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1iujs"]
gradient = SubResource("Gradient_1jnkq")
width = 16
height = 16
fill = 1
fill_from = Vector2(0.5, 0.504274)

[node name="DetectiveBoardMenu" type="CanvasLayer"]
script = ExtResource("1_hmund")

[node name="FadeBackground" parent="." instance=ExtResource("2_jxns0")]

[node name="BoardControler" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
script = ExtResource("3_myonu")
metadata/TextureSize = Vector2(1200, 800)

[node name="BoardBackground" type="TextureRect" parent="BoardControler"]
material = SubResource("ShaderMaterial_ja2cj")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 3840.0
offset_bottom = 2160.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 6
texture = ExtResource("4_l2w5m")
stretch_mode = 1

[node name="BorderShadow" type="TextureRect" parent="BoardControler/BoardBackground"]
modulate = Color(0, 0, 0, 0.92549)
layout_mode = 0
offset_right = 3840.0
offset_bottom = 2160.0
texture = SubResource("GradientTexture2D_5jfcx")

[node name="ElementController" type="Node" parent="BoardControler"]
script = ExtResource("6_mvk05")

[node name="ConnectionController" type="Node" parent="BoardControler"]
script = ExtResource("7_jjw5p")

[node name="ButtonContainer" type="MarginContainer" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.0
offset_right = 45.0
offset_bottom = 90.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="CreateNoteButton" parent="ButtonContainer" instance=ExtResource("8_7p7h1")]
layout_mode = 2
script = ExtResource("9_co2af")

[node name="RichTextLabel" type="RichTextLabel" parent="ButtonContainer/CreateNoteButton"]
visible = false
layout_mode = 0
offset_left = -53.0
offset_top = 40.0
offset_right = 93.0
offset_bottom = 74.0
theme_override_fonts/normal_font = ExtResource("10_1gtg5")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center] Create note"

[node name="ColorSetterContainer" type="MarginContainer" parent="."]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -81.0
offset_right = 203.0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 35

[node name="ColorPicker" type="OptionButton" parent="ColorSetterContainer"]
layout_mode = 2
focus_mode = 0
selected = 0
item_count = 3
popup/item_0/text = "Red"
popup/item_0/icon = SubResource("GradientTexture2D_b8f32")
popup/item_1/text = "Green"
popup/item_1/icon = SubResource("GradientTexture2D_8n1dx")
popup/item_1/id = 1
popup/item_2/text = "Blue"
popup/item_2/icon = SubResource("GradientTexture2D_1iujs")
popup/item_2/id = 2

[connection signal="mouse_entered" from="ButtonContainer/CreateNoteButton" to="ButtonContainer/CreateNoteButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ButtonContainer/CreateNoteButton" to="ButtonContainer/CreateNoteButton" method="_on_mouse_exited"]
[connection signal="pressed" from="ButtonContainer/CreateNoteButton" to="BoardControler/ElementController" method="_on_button_symbol_plus_pressed"]
[connection signal="item_selected" from="ColorSetterContainer/ColorPicker" to="BoardControler/ConnectionController" method="_on_color_picker_item_selected"]
